feat: implement auth, users and realtime authentication with Keycloak
